Fixed markdown content in zodcaption.  Styled scrollbar buttons.

--- a/include/style/article.styl
+++ b/include/style/article.styl
@@ -145,7 +145,7 @@ article
                         background-color: zodnote-color-red
 
             .highlight-body
-                max-height: 26.8em;
+                max-height: 26.8em
             
             .file-box 
                 max-height: 26.2em
