--- a/include/style/base.styl
+++ b/include/style/base.styl
@@ -98,8 +98,8 @@ body > .section
 
     ::-webkit-scrollbar-thumb
         border-radius: 3px
-        background: rgba(0,0,0,0.12)
+        background: #4c5f67
         box-shadow: inset 0 0 10px rgba(0,0,0,0.2)
 
     ::-webkit-scrollbar-thumb:hover
-        background: rgba(0,0,0,0.24)
+        background: #61696b
